--- a/platforms/documentation/docs/src/docs/userguide/releases/upgrading/upgrading_version_8.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/releases/upgrading/upgrading_version_8.adoc
@@ -3278,7 +3278,7 @@ If the desired configuration is to disable cleanup for older versions of Gradle 
 [source,kotlin]
 ----
 if (GradleVersion.current() >= GradleVersion.version("8.0")) {
-    apply(from = "gradle8/cache-settings.gradle")
+    apply(from = "gradle8/cache-settings.gradle.kts")
 }
 ----
 =====
